# tabular_search_engine

./: .gitignore  README.md  log.txt  main.py  pyproject.toml  requirements.txt  setup.sh
output_csv/: semiconductors.csv
output_tables/: oil_companies.xlsx  semiconductors.xlsx  testing_cli.xlsx
prompt_template/: example.yaml  example_template.txt  examples.yaml  prefix.txt  preflight.txt  suffix.txt
tables/: Products.csv
tabular_search/: __main__.py  request_engine.py
tests/: test_PreviewModel.py  test_RAG.py
