[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "tabular search engine"
version = "0.0.1"
authors = [
  { name="Stella Muamba Ngufulu", email="smn-work@outlook.de" },
]
description = "Preview of a feature of Talonic.ai software"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}
