[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tabular_search"
version = "1.0.0"
authors = [
  { name="Stella Muamba Ngufulu", email="smn-work@outlook.de" },
]
description = "Preview of a feature of Talonic.ai software"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["tabular_search"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
